# rs-back

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
achievements/: admin.py  models.py  router.py  serializers.py  urls.py
achievements/migrations/: 0001_initial.py  0002_alter_achievement_options.py
common/: __init__.py  pagination.py
config/: env.py
events/: admin.py  models.py  router.py  serializers.py  urls.py
events/migrations/: 0001_initial.py  0002_alter_event_options_event_background_img.py  0003_event_registration_url.py
hardathons/: admin.py  apps.py  models.py  router.py  serializers.py  urls.py
hardathons/migrations/: 0001_initial.py  0002_hardathon_quote.py
hardathons_preview/: admin.py  apps.py  models.py  router.py  serializers.py  urls.py
hardathons_preview/migrations/: 0001_initial.py
news/: admin.py  models.py  router.py  serializers.py  urls.py
news/migrations/: 0001_initial.py  0002_alter_newsrecord_options_alter_newsrecord_content_and_more.py
partners/: admin.py  models.py  router.py  serializers.py  urls.py
partners/migrations/: 0001_initial.py  0002_alter_partner_options.py
rs_back/: asgi.py  settings.py  urls.py  wsgi.py
rs_back/achievement/: admin.py  forms.py  models.py  router.py  serializers.py  urls.py
rs_back/core/: models.py
rs_back/events/: admin.py  forms.py  models.py  router.py  serializers.py
rs_back/hardathon/: admin.py  forms.py  models.py  router.py  serializers.py
rs_back/news/: admin.py  forms.py  models.py  router.py  serializers.py
utils/: pagination.py
(+19 files in other folders)
