[tool.poetry]
name = "rs-back"
version = "0.1.0"
description = ""
authors = ["zhikh <zhikh.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-debug-toolbar = "^5.0.1"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"
pillow = ">=11.2.1"
django = ">=5.2.1"
python-dotenv = ">=1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
